# anomaly_detection

./: .gitignore  README.md  conda_env.yaml  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
anomaly_detection/configs/: baseline.yaml
anomaly_detection/models/: baseline.py
anomaly_detection/pipelines/: train_baseline.py  utils.py
