[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly_detection"
version = "0.1.0"
description = "A package for anomaly detection in fabric images using deep learning"
readme = "README.md"
authors = [
    {name = "Eduardo Guerra", email = "eduardo.vilasboas.guerra@gmail.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11"
]

# Dynamic dependencies from requirements.txt
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/Eduardo-Vilas-Boas/anomaly_detection"
"Bug Tracker" = "https://github.com/Eduardo-Vilas-Boas/anomaly_detection/issues"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
